# 30-seconds-realworld-app-starter-collections

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
src/: main.rs  rest.rs  schemas.rs  store_interface.rs  test_rest.rs
src/stores/: memory.rs  postgres.rs  test_memory.rs
src/tests/: memory.rs  rest.rs
tests/: integration_tests.rs
